src/tui/snapshots/chess__tui__panels__tests__menu_both_engines_80x24.snap
---
source: src/tui/panels.rs
expression: h.terminal.backend()
---
"                                                                                "
"                                                                                "
"          ┌ rchess ──────────────────────────────────────────────────┐          "
"          │  New game · Computer:  Jev   Laya                        │          "
"          │  > 1. Human vs Human                                     │          "
"          │    2. Human vs Jev: play White                           │          "
"          │    3. Human vs Jev: play Black                           │          "
"          │    4. Human vs Jev: random side                          │          "
"          │    5. Jev vs Jev (watch)                                 │          "
"          │    6. Laya vs Laya (watch)                               │          "
"          │    7. Jev (White) vs Laya (watch)                        │          "
"          │    8. Laya (White) vs Jev (watch)                        │          "
"          │    9. Load FEN                                           │          "
"          │       Quit                                               │          "
"          │                                                          │          "
"          │  Two players take turns at this keyboard.                │          "
"          │                                                          │          "
"          │  Jev ready (jev-test)                                    │          "
"          │  Laya ready (http://127.0.0.1:8000/v1/systemone)         │          "
"          │                                                          │          "
"          │  jk choose · Tab computer · 1-9 start · q quit           │          "
"          └──────────────────────────────────────────────────────────┘          "
"                                                                                "
"                                                                                "
