src/tui/snapshots/chess__tui__panels__tests__menu_laya_off_80x24.snap
---
source: src/tui/panels.rs
expression: h.terminal.backend()
---
"                                                                                "
"                                                                                "
"          ┌ rchess ──────────────────────────────────────────────────┐          "
"          │  New game · Computer:  Jev   Laya                        │          "
"          │  > 1. Human vs Human                                     │          "
"          │    2. Human vs Laya (off): play White                    │          "
"          │    3. Human vs Laya (off): play Black                    │          "
"          │    4. Human vs Laya (off): random side                   │          "
"          │    5. Jev vs Jev (watch)                                 │          "
"          │    6. Laya (off) vs Laya (off) (watch)                   │          "
"          │    7. Jev (White) vs Laya (off) (watch)                  │          "
"          │    8. Laya (off) (White) vs Jev (watch)                  │          "
"          │    9. Load FEN                                           │          "
"          │       Quit                                               │          "
"          │                                                          │          "
"          │  Two players take turns at this keyboard.                │          "
"          │                                                          │          "
"          │  Jev ready (jev-test)                                    │          "
"          │  No LAYA_URL — local search                              │          "
"          │                                                          │          "
"          │  jk choose · Tab computer · 1-9 start · q quit           │          "
"          └──────────────────────────────────────────────────────────┘          "
"                                                                                "
"                                                                                "
