src/tui/snapshots/chess__tui__panels__tests__menu_min_size_60x20.snap
---
source: src/tui/panels.rs
expression: h.terminal.backend()
---
"┌ rchess ──────────────────────────────────────────────────┐"
"│  New game · Computer:  Jev   Laya                        │"
"│  > 1. Human vs Human                                     │"
"│    2. Human vs Jev: play White                           │"
"│    3. Human vs Jev: play Black                           │"
"│    4. Human vs Jev: random side                          │"
"│    5. Jev vs Jev (watch)                                 │"
"│    6. Laya (off) vs Laya (off) (watch)                   │"
"│    7. Jev (White) vs Laya (off) (watch)                  │"
"│    8. Laya (off) (White) vs Jev (watch)                  │"
"│    9. Load FEN                                           │"
"│       Quit                                               │"
"│                                                          │"
"│  Jev ready (jev-test)                                    │"
"│  No LAYA_URL — local search                              │"
"│  ! JEV_MAX_OPTIONS=lots is not a number; using 40        │"
"│  +2 more warnings                                        │"
"│                                                          │"
"│  jk choose · Tab computer · 1-9 start · q quit           │"
"└──────────────────────────────────────────────────────────┘"
