src/tui/snapshots/chess__tui__panels__tests__mid_game_80x24.snap
---
source: src/tui/panels.rs
expression: h.terminal.backend()
---
"┌ Board ────────────────────────────────────┐┌ Status ───────── Human vs Human ┐"
"│                                           ││ White to move · Check           │"
"│ 8  ♜    ♞    ♝    ♛    ♚         ♞    ♜   ││                                 │"
"│                                           ││                                 │"
"│ 7  ♟︎    ♟︎    ♟︎    ♟︎         ♟︎    ♟︎    ♟︎   ││                                 │"
"│                                           │├ Moves ──────────────────────────┤"
"│ 6                                         ││ 1. d4    e5                     │"
"│                                           ││ 2. dxe5  Bb4+                   │"
"│ 5                      ♟︎                  ││                                 │"
"│                                           ││                                 │"
"│ 4       ♝                                 ││                                 │"
"│                                           ││                                 │"
"│ 3            .                            ││                                 │"
"│                                           ││                                 │"
"│ 2  ♟︎    ♟︎    ♟︎    .    ♟︎    ♟︎    ♟︎    ♟︎   ││                                 │"
"│                                           ││                                 │"
"│ 1  ♜  [ ♞ ]  ♝    ♛    ♚    ♝    ♞    ♜   ││                                 │"
"│                                           ││                                 │"
"│    a    b    c    d    e    f    g    h   ││                                 │"
"│                                           ││                                 │"
"└───────────────────────────────────────────┘├ Captured ───────────────────────┤"
"┌ Command ──────────────────────────────────┐│ White  ♟︎  +1                    │"
"│ / move  : command  ? help                 ││ Black                           │"
"└───────────────────────────────────────────┘└─────────────────────────────────┘"
