src/tui/snapshots/chess__tui__panels__tests__mid_game_board_colours.snap
---
source: src/tui/panels.rs
expression: "crop(h.buffer(), board)"
---
Buffer {
    area: Rect { x: 2, y: 4, width: 25, height: 9 },
    content: [
        "8 ♜  ♞  ♝  ♛  ♚     ♞  ♜ ",
        "7 ♟︎  ♟︎  ♟︎  ♟︎     ♟︎  ♟︎  ♟︎ ",
        "6                        ",
        "5             ♟︎          ",
        "4    ♝                   ",
        "3       .                ",
        "2 ♟︎  ♟︎  ♟︎  .  ♟︎  ♟︎  ♟︎  ♟︎ ",
        "1 ♜ [♞] ♝  ♛  ♚  ♝  ♞  ♜ ",
        "  a  b  c  d  e  f  g  h ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 2, y: 0, fg: Rgb(0, 0, 0), bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 3, y: 0, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 4, y: 0, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 5, y: 0, fg: Rgb(0, 0, 0), bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 6, y: 0, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 7, y: 0, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 8, y: 0, fg: Rgb(0, 0, 0), bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 9, y: 0, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 10, y: 0, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 11, y: 0, fg: Rgb(0, 0, 0), bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 12, y: 0, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 13, y: 0, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 14, y: 0, fg: Rgb(0, 0, 0), bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 15, y: 0, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 16, y: 0, fg: Reset, bg: Rgb(148, 143, 42), underline: Reset, modifier: NONE,
        x: 19, y: 0, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 20, y: 0, fg: Rgb(0, 0, 0), bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 21, y: 0, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 22, y: 0, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 23, y: 0, fg: Rgb(0, 0, 0), bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 24, y: 0, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Rgb(0, 0, 0), bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 3, y: 1, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 4, y: 1, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 5, y: 1, fg: Rgb(0, 0, 0), bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 6, y: 1, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 7, y: 1, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 8, y: 1, fg: Rgb(0, 0, 0), bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 9, y: 1, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 10, y: 1, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Rgb(0, 0, 0), bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 12, y: 1, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 13, y: 1, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 16, y: 1, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 17, y: 1, fg: Rgb(0, 0, 0), bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 18, y: 1, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 19, y: 1, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 20, y: 1, fg: Rgb(0, 0, 0), bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 21, y: 1, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 22, y: 1, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 23, y: 1, fg: Rgb(0, 0, 0), bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 24, y: 1, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 4, y: 2, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 7, y: 2, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 10, y: 2, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 13, y: 2, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 16, y: 2, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 19, y: 2, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 22, y: 2, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 4, y: 3, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 7, y: 3, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 10, y: 3, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 13, y: 3, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 14, y: 3, fg: Rgb(255, 255, 255), bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 15, y: 3, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 16, y: 3, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 19, y: 3, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 22, y: 3, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 4, y: 4, fg: Reset, bg: Rgb(148, 143, 42), underline: Reset, modifier: NONE,
        x: 5, y: 4, fg: Rgb(0, 0, 0), bg: Rgb(148, 143, 42), underline: Reset, modifier: NONE,
        x: 6, y: 4, fg: Reset, bg: Rgb(148, 143, 42), underline: Reset, modifier: NONE,
        x: 7, y: 4, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 10, y: 4, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 13, y: 4, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 16, y: 4, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 19, y: 4, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 22, y: 4, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 4, y: 5, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 7, y: 5, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 8, y: 5, fg: Rgb(0, 0, 0), bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 9, y: 5, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 10, y: 5, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 13, y: 5, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 16, y: 5, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 19, y: 5, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 22, y: 5, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 2, y: 6, fg: Rgb(255, 255, 255), bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 3, y: 6, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 4, y: 6, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 5, y: 6, fg: Rgb(255, 255, 255), bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 6, y: 6, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 7, y: 6, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 8, y: 6, fg: Rgb(255, 255, 255), bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 9, y: 6, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 10, y: 6, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 11, y: 6, fg: Rgb(0, 0, 0), bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 12, y: 6, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 13, y: 6, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 14, y: 6, fg: Rgb(255, 255, 255), bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 15, y: 6, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 16, y: 6, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 17, y: 6, fg: Rgb(255, 255, 255), bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 18, y: 6, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 19, y: 6, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 20, y: 6, fg: Rgb(255, 255, 255), bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 21, y: 6, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 22, y: 6, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 23, y: 6, fg: Rgb(255, 255, 255), bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 24, y: 6, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 2, y: 7, fg: Rgb(255, 255, 255), bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 3, y: 7, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 4, y: 7, fg: Rgb(0, 0, 0), bg: Rgb(180, 90, 180), underline: Reset, modifier: NONE,
        x: 5, y: 7, fg: Rgb(255, 255, 255), bg: Rgb(94, 155, 74), underline: Reset, modifier: NONE,
        x: 6, y: 7, fg: Rgb(0, 0, 0), bg: Rgb(180, 90, 180), underline: Reset, modifier: NONE,
        x: 7, y: 7, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 8, y: 7, fg: Rgb(255, 255, 255), bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 9, y: 7, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 10, y: 7, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 11, y: 7, fg: Rgb(255, 255, 255), bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 12, y: 7, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 13, y: 7, fg: Reset, bg: Rgb(208, 68, 60), underline: Reset, modifier: NONE,
        x: 14, y: 7, fg: Rgb(255, 255, 255), bg: Rgb(208, 68, 60), underline: Reset, modifier: NONE,
        x: 15, y: 7, fg: Reset, bg: Rgb(208, 68, 60), underline: Reset, modifier: NONE,
        x: 16, y: 7, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 17, y: 7, fg: Rgb(255, 255, 255), bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 18, y: 7, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 19, y: 7, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 20, y: 7, fg: Rgb(255, 255, 255), bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 21, y: 7, fg: Reset, bg: Rgb(122, 86, 52), underline: Reset, modifier: NONE,
        x: 22, y: 7, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 23, y: 7, fg: Rgb(255, 255, 255), bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 24, y: 7, fg: Reset, bg: Rgb(181, 136, 99), underline: Reset, modifier: NONE,
        x: 0, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
