src/tui/snapshots/chess__tui__panels__tests__playing_start_120x40_vs_jev.snap
---
source: src/tui/panels.rs
expression: h.terminal.backend()
---
"┌ Board ────────────────────────────────────────────────────────────────────┐┌ Status ───────────── You (Black) vs Jev ┐"
"│                                                                           ││ White to move (Jev)                     │"
"│                                                                           ││ | Jev thinking... 0.0s                  │"
"│ 1    ♜        ♞        ♝        ♚        ♛        ♝        ♞        ♜     ││                                         │"
"│                                                                           ││                                         │"
"│                                                                           │├ Jev ────────────────────────────────────┤"
"│                                                                           ││ Jev ready (jev-test)                    │"
"│ 2    ♟︎        ♟︎        ♟︎        ♟︎        ♟︎        ♟︎        ♟︎        ♟︎     ││ no move yet                             │"
"│                                                                           ││                                         │"
"│                                                                           │├ Moves ──────────────────────────────────┤"
"│                                                                           ││ no moves yet                            │"
"│ 3                                                                         ││                                         │"
"│                                                                           ││                                         │"
"│                                                                           ││                                         │"
"│                                                                           ││                                         │"
"│ 4                                                                         ││                                         │"
"│                                                                           ││                                         │"
"│                                                                           ││                                         │"
"│                                                                           ││                                         │"
"│ 5                                                                         ││                                         │"
"│                                                                           ││                                         │"
"│                                                                           ││                                         │"
"│                                                                           ││                                         │"
"│ 6                                                                         ││                                         │"
"│                                                                           ││                                         │"
"│                                                                           ││                                         │"
"│                                                                           ││                                         │"
"│ 7    ♟︎        ♟︎        ♟︎        ♟︎        ♟︎        ♟︎        ♟︎        ♟︎     ││                                         │"
"│                                                                           ││                                         │"
"│                                                                           ││                                         │"
"│                                                                           ││                                         │"
"│ 8    ♜        ♞        ♝        ♚        ♛        ♝        ♞        ♜     ││                                         │"
"│                                                                           ││                                         │"
"│                                                                           ││                                         │"
"│      h        g        f        e        d        c        b        a     ││                                         │"
"│                                                                           ││                                         │"
"└───────────────────────────────────────────────────────────────────────────┘├ Captured ───────────────────────────────┤"
"┌ Command ──────────────────────────────────────────────────────────────────┐│ White                                   │"
"│ / move  : command  ? help                                                 ││ Black                                   │"
"└───────────────────────────────────────────────────────────────────────────┘└─────────────────────────────────────────┘"
