src/tui/snapshots/chess__tui__panels__tests__playing_start_80x24.snap
---
source: src/tui/panels.rs
expression: h.terminal.backend()
---
"┌ Board ────────────────────────────────────┐┌ Status ───────── Human vs Human ┐"
"│                                           ││ White to move                   │"
"│ 8  ♜    ♞    ♝    ♛    ♚    ♝    ♞    ♜   ││                                 │"
"│                                           ││                                 │"
"│ 7  ♟︎    ♟︎    ♟︎    ♟︎    ♟︎    ♟︎    ♟︎    ♟︎   ││                                 │"
"│                                           │├ Moves ──────────────────────────┤"
"│ 6                                         ││ no moves yet                    │"
"│                                           ││                                 │"
"│ 5                                         ││                                 │"
"│                                           ││                                 │"
"│ 4                                         ││                                 │"
"│                                           ││                                 │"
"│ 3                                         ││                                 │"
"│                                           ││                                 │"
"│ 2  ♟︎    ♟︎    ♟︎    ♟︎    ♟︎    ♟︎    ♟︎    ♟︎   ││                                 │"
"│                                           ││                                 │"
"│ 1  ♜    ♞    ♝    ♛    ♚    ♝    ♞    ♜   ││                                 │"
"│                                           ││                                 │"
"│    a    b    c    d    e    f    g    h   ││                                 │"
"│                                           ││                                 │"
"└───────────────────────────────────────────┘├ Captured ───────────────────────┤"
"┌ Command ──────────────────────────────────┐│ White                           │"
"│ / move  : command  ? help                 ││ Black                           │"
"└───────────────────────────────────────────┘└─────────────────────────────────┘"
