src/tui/snapshots/chess__tui__panels__tests__promotion_80x24.snap
---
source: src/tui/panels.rs
expression: h.terminal.backend()
---
"┌ Board ────────────────────────────────────┐┌ Status ───────── Human vs Human ┐"
"│                                           ││ White to move                   │"
"│ 8                    [ . ]                ││ position loaded                 │"
"│                                           ││                                 │"
"│ 7                      ♟︎                  ││                                 │"
"│                                           │├ Moves ──────────────────────────┤"
"│ 6                                         ││ no moves yet                    │"
"│                                           ││                                 │"
"│ 5                                         ││                                 │"
"│          ┌ Promote to ────────────────────────────────────────────┐          │"
"│ 4        │  [ ♛ Queen ]  [ ♜ Rook ]  [ ♝ Bishop ]  [ ♞ Knight ]   │          │"
"│          │                                                        │          │"
"│ 3        │    q r b n, arrows and Enter, or click; Esc cancels    │          │"
"│          └────────────────────────────────────────────────────────┘          │"
"│ 2  ♚                                      ││                                 │"
"│                                           ││                                 │"
"│ 1                      ♚                  ││                                 │"
"│                                           ││                                 │"
"│    a    b    c    d    e    f    g    h   ││                                 │"
"│                                           ││                                 │"
"└───────────────────────────────────────────┘├ Captured ───────────────────────┤"
"┌ Command ──────────────────────────────────┐│ White  +1                       │"
"│ / move  : command  ? help                 ││ Black                           │"
"└───────────────────────────────────────────┘└─────────────────────────────────┘"
