src/tui/snapshots/chess__tui__panels__tests__quit_80x24.snap
---
source: src/tui/panels.rs
expression: h.terminal.backend()
---
"┌ Board ────────────────────────────────────┐┌ Status ───────── Human vs Human ┐"
"│                                           ││ Black to move                   │"
"│ 8  ♜    ♞    ♝    ♛    ♚    ♝    ♞    ♜   ││                                 │"
"│                                           ││                                 │"
"│ 7  ♟︎    ♟︎    ♟︎    ♟︎    ♟︎    ♟︎    ♟︎    ♟︎   ││                                 │"
"│                                           │├ Moves ──────────────────────────┤"
"│ 6                                         ││ 1. e4                           │"
"│                                           ││                                 │"
"│ 5                                         ││                                 │"
"│           ┌ Quit ────────────────────────────────────────────────┐           │"
"│ 4         │ Quit the game in progress?                           │           │"
"│           │                                                      │           │"
"│ 3         │                   [ Yes ]  [ No ]                    │           │"
"│           └──────────────────────────────────────────────────────┘           │"
"│ 2  ♟︎    ♟︎    ♟︎    ♟︎         ♟︎    ♟︎    ♟︎   ││                                 │"
"│                                           ││                                 │"
"│ 1  ♜    ♞    ♝    ♛    ♚    ♝    ♞    ♜   ││                                 │"
"│                                           ││                                 │"
"│    a    b    c    d    e    f    g    h   ││                                 │"
"│                                           ││                                 │"
"└───────────────────────────────────────────┘├ Captured ───────────────────────┤"
"┌ Command ──────────────────────────────────┐│ White                           │"
"│ / move  : command  ? help                 ││ Black                           │"
"└───────────────────────────────────────────┘└─────────────────────────────────┘"
