src/tui/snapshots/chess__tui__panels__tests__too_small_50x12.snap
---
source: src/tui/panels.rs
expression: h.terminal.backend()
---
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"          Terminal too small (need 60×20)         "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
